fixed firefox animation jump

--- a/src/components/m-footer-links/index.scss
+++ b/src/components/m-footer-links/index.scss
@@ -141,20 +141,17 @@
 .m-footer-links--cols-2 {
   @include make-col(5);
 
+  // Firefox messes with scrollHeight on mobile if it's set there
   .m-footer-links__list {
-    column-count: 2;
-
-    @include respond-down(xs) {
-      column-count: 1;
+    @include respond-up(sm) {
+      column-count: 2;
     }
   }
 
   // fix CSS-Column offset bug
   .m-footer-links__list-item {
-    display: inline-block;
-
-    @include respond-down(xs) {
-      display: block;
+    @include respond-up(sm) {
+      display: inline-block;
     }
   }
 
